# Warranty_claims

./: README.md
warranty-claims-agent/: .env.example  .gitignore  LICENSE  pyproject.toml  requirements.txt
warranty-claims-agent/data/test_claims/: test_dataset.json
warranty-claims-agent/data/test_claims/inquiry/: inquiry_001.json  inquiry_002.json  inquiry_003.json
warranty-claims-agent/data/test_claims/invalid/: invalid_commercial_001.json  invalid_dropped_001.json  invalid_expired_001.json  invalid_expired_002.json  invalid_expired_003.json  invalid_expired_004.json  invalid_expired_005.json  invalid_maintenance_001.json  invalid_missing_001.json  invalid_missing_002.json  invalid_missing_003.json  invalid_overuse_001.json  invalid_repair_001.json  invalid_water_001.json  invalid_water_002.json
warranty-claims-agent/data/test_claims/spam/: inquiry_001.json  inquiry_002.json  spam_001.json  spam_002.json  spam_003.json  spam_004.json
warranty-claims-agent/data/test_claims/valid/: valid_001.json  valid_002.json  valid_003.json  valid_004.json  valid_005.json  valid_006.json  valid_007.json  valid_008.json  valid_009.json
warranty-claims-agent/scripts/: generate_claims.py  generate_policies.py  reset_data.py  run_evaluation.py  run_phoenix_evaluation.py  view_chroma_db.py  view_claims_db.py
warranty-claims-agent/src/: __init__.py  agent.py  app.py  config.py  ingest.py  models.py  phoenix_tracing.py  server.py
