[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warranty-claims-agent"
version = "1.0.0"
description = "Agentic AI system for warranty claims processing with human-in-the-loop"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Warranty Claims Team"}
]

dependencies = [
    # LLM & Agent Framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",

    # Structured Output & Validation
    "instructor>=1.0.0",
    "pydantic>=2.0.0",

    # Document Processing
    "docling>=2.0.0",

    # Vector Store & Embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",

    # Observability
    "arize-phoenix>=5.0.0",
    "openinference-instrumentation-langchain>=0.1.0",

    # Web UI
    "streamlit>=1.39.0",

    # PDF Generation
    "reportlab>=4.0.0",

    # File Watching
    "watchdog>=5.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "faker>=30.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
warranty-agent = "src.agent:main"
warranty-ingest = "src.ingest:main"
warranty-server = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
